<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/addBookPartCard"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/add_book_card_margin_bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/add_book_linear_margin"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addBookNameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/add_book_name_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/addBookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_book_name_hint"
                android:inputType="textMultiLine"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/addAuthorFieldsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="first name"
                android:layout_margin="@dimen/add_author_name_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/addAuthorFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_author_name"
                    android:inputType="textMultiLine"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="surname"
                android:layout_margin="@dimen/add_author_surname_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/addAuthorSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_author_surname"
                    android:inputType="textMultiLine"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="middle name"
                android:layout_margin="@dimen/add_author_patronymic_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/addAuthorMiddleName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_author_second_name"
                    android:inputType="textMultiLine"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/addAuthorFieldsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/add_button_margin_end"
            android:layout_marginStart="@dimen/add_button_margin_start"
            android:background="@drawable/circle_border_button"
            android:textColor="@color/colorAccent"
            android:text="@string/add_author_button_text"/>

    </LinearLayout>


</android.support.v7.widget.CardView>