<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/myQuoteFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/my_quote_fab_margin_bottom"
        android:layout_marginEnd="@dimen/my_quote_fab_margin_end"
        android:visibility="invisible"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_face_white_18dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/bookQuoteFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/book_quote_fab_margin_bottom"
        android:layout_marginEnd="@dimen/book_quote_fab_margin_end"
        android:visibility="invisible"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_import_contacts_white_18dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/add_fab_margin"
        app:srcCompat="@drawable/ic_add_white_24dp"/>
</FrameLayout>