...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_main_spinner_title_margin"
            android:text="@string/add_main_spinner_title_text"/>

        <Spinner
            android:id="@+id/addCategorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/spinnerDivider"
            android:layout_width="match_parent"
...
